k8s-yamls/create-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: chaos
spec: {}
status: {}
