k8s-yamls/first_exp_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: hello-world-pod
  name: hello-world
spec:
      containers:
      - image: shishirkhandelwal/hello-world:0.1
        name: hello-world
        resources: {}
status: {}
