k8s-yamls/second_exp_gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gw
  namespace: chaos
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - shishir.hello.com
    port:
      name: http
      number: 80
      protocol: HTTP
