k8s-yamls/second_exp_dr.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dr
  namespace: chaos
spec:
  host: hello-world-svc
  subsets:
  - name: primary
    labels:
      app: hello-world
