k8s-yamls/second_exp_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: vs
  namespace: chaos
spec:
  gateways:
  - gw
  hosts:
  - shishir.hello.com
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: hello-world-svc
        port:
          number: 3000
        subset: primary
